<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="highScoresFragment"
            type="ja.zebologowememory.highscores.HighScoresFragment" />
        <variable
            name="highScoresViewModel"
            type="ja.zebologowememory.highscores.HighScoresViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_high_scores_table"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/high_scores_table"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_points_table"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/punkty"

            android:textSize="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_high_scores_table" />

        <TextView
            android:id="@+id/text_view_date_table"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/data"
            android:textSize="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_high_scores_table" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_points_table"
            tools:listitem="@layout/score_item" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> highScoresFragment.back()}"
            android:text="@string/powrot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_delete_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> highScoresFragment.deleteScores()}"
            android:text="@string/usunwyniki"
            app:layout_constraintBottom_toTopOf="@+id/button_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>