<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="menuFragment"
            type="ja.zebologowememory.menu.MenuFragment" />
        <variable
            name="menuViewModel"
            type="ja.zebologowememory.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu.MenuFragment">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/memory"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_creator"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/tomaszadamczyk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

        <ImageView
            android:id="@+id/question_mark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/tooth"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="440dp"
            android:onClick="@{()-> menuFragment.play()}"
            android:text="@string/graj"
            app:layout_constraintBottom_toTopOf="@+id/button_high_scores_table"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_high_scores_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:onClick="@{()-> menuFragment.highScoresTable()}"
            android:text="@string/tabelawynikow"
            app:layout_constraintBottom_toTopOf="@+id/button_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> menuFragment.exit()}"
            android:text="@string/wyjscie"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>